--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Test</title>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.12/handlebars.runtime.js"></script>
     <script type="text/javascript" src="templates/file.js"></script>
+    <script type="text/javascript" src="templates/content.js"></script>
 </head>
 <body>
     <h1>New test file Handlebars</h1>
